<resources>
    <string name="app_name">SBUPurple2022CodeAThon</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="health">Health</string>
    <string name="conversion">Conversions</string>
    <string name="previous">Home</string>
    <string name="life">Life</string>
    <string name="tie_tieing_greet">How to Tie a Tie</string>
    <string name="auto">Auto</string>
    <string name="next">Next</string>
    <string name="hello_first_fragment">Welcome to TrueClues!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_third_fragment">Hello third fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty">EMPTY</string>
    <string name="blank"></string>
    <!-- Auto -->
    <string name="changeTire">How to Change a Tire</string>
    <string name="checkTire">How to Check Tire Pressure</string>
    <string name="pumpGas">How to Pump Gas</string>
    <!-- Conversions -->
    <string name="CtoF">Celsius to Fahrenheit</string>
    <string name="FtoC">Fahrenheit to Celsius</string>
    <!-- Health -->
    <string name="calmDown">How to Relax</string>
    <string name="instructions">Breathe in</string>
    <string name="Pulse">Pulse</string>
    <string name="countDownStart">start</string>
    <string name="countDownReset">reset</string>

    <string name="cpr">How to Perform CPR</string>
    <string name="checkPulse">How to Check Your Pulse</string>
    <!-- Life -->
    <string name="tieTie">How to Tie a Tie</string>
    <string name="makeCoffee">How to Make Coffee</string>
    <string name="writeCheck">How to Write a Check</string>
    <string name="home">TrueClues</string>
    <string name="tieHome">Tie Home</string>

    <string name="lifePathFour">Calculate a Tip</string>
    <string name="lifePathThree">Write a Check</string>
    <string name="lifePathTwo">Make Coffee</string>
    <string name="lifePathOne">Tie a Tie</string>
    <string name="lifePathOneOne">Which Tie Knot Do you Want?</string>
    <string name="homeLifehome">Home</string>
    <string name="lifeHome">Life Home</string>
    <string name="back">Back</string>
    <string name="Step1">Step 1</string>
    <string name="Step2">Step 2</string>
    <string name="Step3">Step 3</string>
    <string name="Step4">Step 4</string>
    <string name="Step5">Step 5</string>
    <string name="Step6">Step 6</string>
    <string name="Step7">Step 7</string>
    <string name="Step8">Step 8</string>
    <string name="Step9">Step 9</string>
    <string name="Step10">Step 10</string>
    <string name="Step11">Step 12</string>
    <string name="windsor1">Half Windsor</string>
    <string name="windsor11">Drape the tie around your neck with the wide end about 12 inches below the narrow end.</string>
    <string name="windsor12">Cross the wide end of the tie over the narrow end.</string>
    <string name="windsor13">Push the wide end up through the loop near your collar.</string>
    <string name="windsor14">Pull the wide end out and over the loop around your neck (to your right).</string>
    <string name="windsor15">Pull the wide end out and over the loop around your neck (to your right).</string>
    <string name="windsor16">Then pass it over the front of the loop to create a horizontal bar (the front face of the triangle). You can use your fingers to maintain some space behind this bar.</string>
    <string name="windsor17">Now push the wide end up through the back of the loop around your collar.</string>
    <string name="windsor18">Then tuck the wide end through the bar you just created at the front of the loop.</string>
    <string name="windsor19">Pull down gently on the wide end to tighten your knot. Hold the narrow end and push the knot up towards your collar to finish.</string>
    <string name="windsor110">To finish, push the narrow end of your tie through the keeper loop behind the wide end.</string>
    <string name="windsor2">Full Windsor</string>
    <string name="simpleKnot">Simple Knot</string>
    <string name="fourInHandKnot">Four In Hand Knot</string>
    <string name="lifeTitle">General Life Essentials</string>
    <string name="step_03">Step 3:</string>
    <string name="before_you_begin_jacking_the_car_loosen_but_do_not_take_off_completely_the_lug_nuts">Before you begin jacking the car, loosen–but do not take off completely–the lug nuts.</string>
    <string name="find_and_retrieve_your_spare_tire_usually_under_a_cover_in_your_trunk_and_ensure_it_is_not_flat">Find and retrieve your spare tire (Usually under a cover in your trunk), and ensure it is not flat.</string>
    <string name="step_01">Step 1:</string>
    <string name="step_02">Step 2:</string>
    <string name="find_and_retrieve_the_jack_usually_found_in_the_same_area_as_the_spare">Find and retrieve the jack (usually found in the same area as the spare).</string>
    <string name="step_04">Step 4:</string>
    <string name="place_the_jack_under_the_car_near_the_flat_tire_be_sure_to_place_it_under_a_good_part_of_the_frame_the_owner_s_manual_is_a_good_place_to_find_where_to_properly_place_the_jack_if_your_are_unsure">Place the jack under the car near the flat tire. Be sure to place it under a good part of the frame. The owner\'s manual is a good place to find where to properly place the jack if your are unsure.</string>
    <string name="step_05">Step 5:</string>
    <string name="raise_the_car_with_the_jack">Raise the car with the jack.</string>
    <string name="step_6">Step 6:</string>
    <string name="once_the_car_is_far_enough_off_the_ground_take_off_the_lug_nuts_completely_remove_the_flat_tire_and_set_it_somewhere_safe_and_out_of_the_way">Once the car is far enough off the ground, take off the lug nuts completely, remove the flat tire and set it somewhere safe and out of the way</string>
    <string name="step_7">Step 7:</string>
    <string name="place_the_spare_tire_on_the_newly_vacant_axel_and_begin_tightening_on_the_lug_nuts_get_them_as_tight_as_you_can_without_too_much_force">Place the spare tire on the newly vacant axel, and begin tightening on the lug nuts. Get them as tight as you can without too much force.</string>
    <string name="step_8">Step 8:</string>
    <string name="lower_the_car_and_remove_the_jack">Lower the car, and remove the jack.</string>
    <string name="final_step">Final Step</string>
    <string name="tighten_the_lug_nuts_the_rest_of_the_way_and_place_everything_back_in_its_place">Tighten the lug nuts the rest of the way, and place everything back in its place.</string>
    <string name="finalStep">Final Step:</string>
    <string name="auto_home2">Auto Home</string>
    <string name="tighten_lug_nuts_then_put_all_tools_back_where_they_came_from">Tighten lug nuts, then put all tools back where they came from.</string>
    <string name="step_1">Step 1:</string>
    <string name="find_the_gas_tank_on_your_car_and_remove_the_gas_tank_cap">Find the gas tank on your car, and remove the gas tank cap.</string>
    <string name="step_2">Step 2:</string>
    <string name="insert_your_credit_card_and_wait_until_the_system_tells_you_to_remove_it_you_may_need_to_enter_your_zip_code_so_be_sure_you_know_what_that_is">Insert your credit card, and wait until the system tells you to remove it (you may need to enter your zip code so be sure you know what that is).</string>
    <string name="step_3">Step 3:</string>
    <string name="remove_the_nozzle_then_select_the_grade">Remove the nozzle, then select the grade.</string>
    <string name="step_4">Step 4:</string>
    <string name="place_the_nozzle_in_the_gas_tank_pull_the_trigger_and_lock_it_into_place">Place the nozzle in the gas tank, pull the trigger and lock it into place.</string>
    <string name="step_5">Step 5:</string>
    <string name="it_will_automatically_stop_fueling_once_the_tank_is_full_when_this_happens_remove_the_nozzle_from_the_tank_and_place_it_back_where_you_found_it">It will automatically stop fueling once the tank is full. When this happens, remove the nozzle from the tank and place it back where you found it.</string>
    <string name="final_step2">Final Step:</string>
    <string name="place_the_gas_cap_back_on_the_tank_and_collect_receipt">Place the gas cap back on the tank, and collect receipt.</string>
    <string name="screw_the_gas_cap_back_on_the_tank_and_collect_receipt">Screw the gas cap back on the tank, and collect receipt.</string>
    <string name="auto_home">Auto Home</string>
    <string name="flat_tire">Flat Tire</string>
    <string name="pump_gas">Pump Gas</string>
    <string name="door_3">Door #3</string>
    <string name="door_4">Door #4</string>

    <string name="textview">TextView</string>

    <string name="feet_to_inches">Feet to Inches</string>
    <string name="enter_height_in_inches">Enter height in inches:</string>
    <string name="enter_height_in_feet">Enter height in feet:</string>
    <string name="enter_pounds">Enter pounds:</string>
    <string name="pounds_to_kilograms">Pounds to Kilograms</string>
    <string name="enter_temperature">Enter temperature:</string>
    <string name="Ftinconversion">conversion:</string>
    <string name="Result">TextView</string>
    <string name="result">Result:</string>
    <string name="farenheit_to_celcius">Fahrenheit to Celsius</string>
    <string name="celius_to_farenheit">Celsius to Fahrenheit</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="total_bill">Total Bill:</string>
    <string name="enter_tip">enter tip %:</string>
    <string name="total">Total</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="enter_bill_amount">enter bill amount:</string>
    <string name="tire_pressure">tire pressure</string>
    <string name="wiper_fluid">wiper fluid</string>
    <string name="gramPounds">Kilograms to Pounds</string>
    <string name="kmToMiles">Miles to Kilometers</string>
    <string name="enter_miles">Enter miles:</string>

</resources>