<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/LifeHome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
   <TextView
        android:id="@+id/outputHeightinInches"
        android:layout_width="195dp"
        android:layout_height="87dp"
        android:layout_marginBottom="156dp"
        android:hint="@string/Ftinconversion"
        android:textColorHint="#000000 "
        android:textSize="32sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/FeetToInches"
        android:layout_width="177dp"
        android:layout_height="84dp"
        android:layout_marginTop="320dp"
        android:backgroundTint="#7B9EA8"
        android:hint="@string/feet_to_inches"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputheightin"
        android:layout_width="155dp"
        android:layout_height="87dp"
        android:layout_marginTop="92dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_height_in_inches"
        android:inputType="numberDecimal"
        android:textColorHint="#000000 "
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputheightft"
        android:layout_width="155dp"
        android:layout_height="87dp"
        android:layout_marginTop="92dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_height_in_feet"
        android:inputType="numberDecimal"
        android:textColorHint="#000000 "
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>