<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HealthHome">

    <TextView
        android:id="@+id/HealthHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:backgroundTint="#DDEDAA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/HealthHome"
        app:layout_constraintVertical_bias="0.86" />

    <Button
        android:id="@+id/pathOne"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/calmDown"
        android:backgroundTint="#C98686"
        app:layout_constraintBottom_toTopOf="@+id/pathThree"
        app:layout_constraintEnd_toStartOf="@+id/pathTwo"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HealthHome"
        app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/pathTwo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="132dp"
        android:text="@string/checkPulse"

        android:backgroundTint="#C98686"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toEndOf="@+id/pathThree"
        app:layout_constraintTop_toBottomOf="@+id/HealthHome" />

    <Button
        android:id="@+id/pathThree"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/cpr"
        android:backgroundTint="#C98686"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pathTwo"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>